--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 
     <title>Exercício FBMPLAF</title>
 
+    <h1> Primeiro exercício de CSS</h1> <br><br>
+
 </head>
 
 <body>
 
-    <h1>Primeiro exercício de CSS</h1>
+    <div>
+    <a href="/DIV.html">Divs</a>
+    <a href="/hyperlinks.html">Hyperlinks</a>
+    </div>
 
 </body>
 
