--- a/hyperlinks.html
+++ b/hyperlinks.html
@@ -24,6 +24,7 @@
     <div>
     <a href="index.html">Página Inicial</a>
     <a href="DIV.html">DIVs</a>
+    <a href="/lojaSapatos.html">Loja de Sapatos</a>
     </div>
 
 </body>
