--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div>
     <a href="/DIV.html">Divs</a>
     <a href="/hyperlinks.html">Hyperlinks</a>
+    <a href="/lojaSapatos.html">Loja de Sapatos</a>
     </div>
 
 </body>
