--- a/DIV.html
+++ b/DIV.html
@@ -30,6 +30,7 @@
     <div>
     <a href="index.html">Página Inicial</a>
     <a href="hyperlinks.html">Hyperlinks</a>
+    <a href="/lojaSapatos.html">Loja de Sapatos</a>
     </div>
 
 </body>
